--- a/lesson/lesson8/objectNewSyntax.html
+++ b/lesson/lesson8/objectNewSyntax.html
@@ -40,7 +40,7 @@
             // asd(obj);
 
             // let {status} = user;
-            // console.log(statrus);
+            // console.log(status);
 
             // let name = 'vasua';
             // let age = 31;
